<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TriageAPP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="title_activity_register">MainActivity</string>
    <string name="title_activity_menu">MainActivity</string>
    <string name="Submit">Submit</string>
    <string name="Back">Back</string>
    <string name="Menu">Menu</string>
    <string name="title_activity_add_new">AddNewActivity</string>
    <string name="title_activity_add_vitalsign">AddVitalsignActivity</string>
    <string name="AddNew">Add New Patient</string>
    <string name="AddVitalsign">Add Vital Sign For Patient</string>
    <string name="Logout">Logout</string>
    <string name="PatientName">Patient Name</string>
    <string name="DOB">Date of Birth MM/DD/YYYY</string>
    <string name="HID">Health Card Number</string>
    <string name="ArrivalTime">Arrival Time HH:MM</string>
    <string name="Temp">Temperature</string>
    <string name="BloodP">Blood Pressure</string>
    <string name="HeartR">Heart Rate</string>
    <string name="VitalsignTime">Vitalsign Record Time</string>
    <string name="Symptom">Symptom</string>
    <string name="AddVitalSign">Add Vitalsigns </string>
    <string name="To">TO</string>
    <string name="Nurse">Nurse</string>
    <string name="Physician">Physician</string>
    <string name="title_activity_physician_menu">PhysicianMenuActivity</string>
    <string name="SeenDoctor">seen a doctor?</string>
    <string name="NotSeenDoctor">not seen a doctor?</string>
    <string name="AskForDoctor">Have this patient</string>
    <string name="SeenDoctorTime">Met Doctor Time</string>
    <string name="SeenDoctorDate">Met Doctor Date</string>
    <string name="Search">Search</string>
    <string name="Prescription">Prescription Information Write here</string>
    <string name="pHID">Give health card number here</string>
    <string name="LookUpPatient">Look Up Information of Patient</string>
    <string name="title_activity_look_up_patient">LookUpPatientActivity</string>
    <string name="AccessListOfPatients">Access The Sort List of Patients</string>
    <string name="title_activity_access_patients_list">AccessPatientsListActivity</string>
    <string name="sort1">Sort Patients By Arrival Time</string>
    <string name="sort2">Sort Patients By Urgence</string>
    <string name="Editseendoctor">If you want to edit the SEEN DOCTOR</string>

</resources>
