<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/n_back"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/n_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PatientName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/n_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/DOB"
            android:inputType="date" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/n_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/HID"
            android:inputType="number" />

        <EditText
            android:id="@+id/n_arrivaltime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ArrivalTime"
            android:inputType="time" />
    </LinearLayout>

    <Button
        android:id="@+id/n_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="SubmitPatientinfo"
        android:text="@string/Submit" />

    <Button
        android:id="@+id/n_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="BackToMenu"
        android:text="@string/Back" />

    <Button
        android:id="@+id/n_logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="BackToLogin"
        android:text="@string/Logout" />

    <RadioGroup
        android:id="@+id/n_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_centerVertical="true" >

        <RadioButton
            android:id="@+id/n_seendoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/SeenDoctor" />

        <RadioButton
            android:id="@+id/n_notseendoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/NotSeenDoctor" />
    </RadioGroup>

    <TextView
        android:id="@+id/n_askfordoctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/n_radiogroup"
        android:layout_alignLeft="@+id/n_radiogroup"
        android:text="@string/AskForDoctor" />



    <LinearLayout
        android:id="@+id/invisiablelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/n_radiogroup"
        android:layout_toLeftOf="@+id/n_back"
        android:orientation="vertical" 
        android:visibility="invisible">"

        <EditText
            android:id="@+id/n_seendoctordate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:ems="10"
            android:hint="@string/SeenDoctorDate"
            android:inputType="date" />

	    <EditText
        	android:id="@+id/n_seendoctortime"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:hint="@string/SeenDoctorTime"
        	android:inputType="time" />
    </LinearLayout>

</RelativeLayout>