<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Register"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/r_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username" >

            <requestFocus android:layout_height="match_parent" />
        </EditText>

        <EditText
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/physicianRadioButton"
            	android:layout_width="wrap_content"
           	 	android:layout_height="wrap_content"
            	android:text="@string/Physician"  />

            <RadioButton
                android:id="@+id/nurseRadioButton"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/Nurse" />


        </RadioGroup>


        <Button
            android:id="@+id/r_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="SubmitToFile"
            android:text="@string/Submit" />

        <Button
            android:id="@+id/r_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="BackToLogin"
            android:text="@string/Back" />
    </LinearLayout>

</RelativeLayout>