<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <LinearLayout
		android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Menu"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/m_addnewpatient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="GoToNewPatientEditor"
            android:text="@string/AddNew" />

        <Button
            android:id="@+id/m_addvitalsign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="GoToVitalSignEditor"
            android:text="@string/AddVitalsign" />

        <Button
            android:id="@+id/m_lookuppatient"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="CheckPatientInfo"
            android:text="@string/LookUpPatient" />

        <Button
            android:id="@+id/m_accesslist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick= "AccessPatientList"
            android:text="@string/AccessListOfPatients" />

        <Button
            android:id="@+id/m_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="BackToLogin"
            android:text="@string/Logout" />

    </LinearLayout>

</RelativeLayout>
