<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LookUpPatientActivity" >

    <EditText
        android:id="@+id/l_HID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pHID"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <ScrollView
        android:id="@+id/l_scrolldisplay"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_alignLeft="@+id/l_HID"
        android:layout_below="@+id/l_HID" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/l_DisplayPinfor"
                android:layout_width="fill_parent"
                android:layout_height="1000dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/l_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l_scrolldisplay"
        android:layout_alignRight="@+id/l_scrolldisplay"
        android:onClick="LookupInfoPatient"
        android:text="@string/Search" />

    <Button
        android:id="@+id/l_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backToMenu"
        android:text="@string/Back" />

    <ScrollView
        android:id="@+id/l_scrolllayout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/l_back"
        android:layout_alignLeft="@+id/l_scrolldisplay"
        android:visibility="invisible" >

        <LinearLayout
            android:id="@+id/l_invisiablelayout"
            android:layout_width="fill_parent"
            android:layout_height="500dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/l_seendoctordate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SeenDoctorDate"
                android:inputType="date" />

            <EditText
                android:id="@+id/l_seendoctortime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/SeenDoctorTime"
                android:inputType="time" />

            <Button
                android:id="@+id/l_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="editSeenDoctor"
                android:text="@string/Submit" />
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/l_radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l_scrolllayout"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">"

        <RadioButton
            android:id="@+id/l_seendoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/SeenDoctor" />

        <RadioButton
            android:id="@+id/l_notseendoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/NotSeenDoctor" />
    </RadioGroup>

    <TextView
        android:id="@+id/l_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l_radioGroup1"
        android:layout_alignLeft="@+id/l_radioGroup1"
        android:text="@string/Editseendoctor"
        android:visibility="invisible" />

</RelativeLayout>