<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PhysicianMenuActivity" >

    <EditText
        android:id="@+id/p_HID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pHID"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/p_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/A_health_N"
        android:layout_alignRight="@+id/p_prescriptionlayout"
        android:onClick="LookupPatient"
        android:text="@string/Search" />

    <Button
        android:id="@+id/p_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:onClick="BackToLogin"
        android:text="@string/Logout" />

    <LinearLayout
        android:id="@+id/p_prescriptionlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/p_logout"
        android:layout_alignLeft="@+id/p_logout"
        android:orientation="vertical"
        android:visibility="invisible" >

        <EditText
            android:id="@+id/p_prescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Prescription" />

        <Button
            android:id="@+id/p_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:onClick="Submit_prescription"
            android:text="@string/Submit" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/p_scrolldisplay"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignLeft="@+id/p_HID"
        android:layout_below="@+id/p_HID" 
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/p_DisplayPinfor"
                android:layout_width="fill_parent"
                android:layout_height="1000dp"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>