<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccessPatientsListActivity" >

    <Button
        android:id="@+id/ac_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ac_back"
        android:layout_alignParentBottom="true"
        android:onClick="BackToLogin"
        android:text="@string/Logout" />

    <Button
        android:id="@+id/ac_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ac_logout"
        android:layout_alignLeft="@+id/ac_scrolldisplay2"
        android:onClick="BackToMenu"
        android:text="@string/Back" />

    <ScrollView
        android:id="@+id/ac_scrolldisplay2"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/ac_scrolldisplay"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ac_DisplayList2"
                android:layout_width="fill_parent"
                android:layout_height="1000dp" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/ac_scrolldisplay"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/ac_scrolldisplay2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ac_DisplayList"
                android:layout_width="fill_parent"
                android:layout_height="1000dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ac_scrolldisplay"
        android:layout_alignLeft="@+id/ac_scrolldisplay"
        android:text="@string/sort1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ac_scrolldisplay2"
        android:layout_alignLeft="@+id/ac_scrolldisplay"
        android:text="@string/sort2" />
    
</RelativeLayout>
